Replace FluentIterable with streams